# notion-api-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.http
src/: main.rs
src/api/: handlers.rs  routes.rs
src/application/: services.rs
src/domain/: models.rs  repository.rs
src/infrastructure/: notion.rs
